# MathematischeAlgorithmenSS2022

./: .gitignore  README.md
src/: graphlib.sln
src/ColorHelper/Color/: HSV.cs
src/__DELETE__graph_library/: config_parser.cpp  graph_edge.cpp  graph_edge.h
src/graph_library/: CMakeLists.txt  config_parser.h  graph.cpp  graph.h  graph_datatypes.h  graph_edge.cpp  graph_edge.h  graph_libaray_config.ini  graph_library  graph_node.cpp  graph_node.h  main.cpp
src/graphlib/: EdgeWeigthComparer.cs  GLPriorityQueue.cs  GroupHandler.cs  algorithms.cs  edge.cs  flow_graph.cs  graph.cs  graph_export.cs  graphlib.sln  group_handler.cs  node.cs  predesessor .cs  previous_structure.cs  route.cs  visited_handler.cs
src/graphlibtest/: Program.cs  graphlibtest.csproj
src/graphlibvisu/: Dockerfile  Program.cs  Startup.cs  _Imports.razor  graphlibvisu.csproj
src/graphlibvisu/Data/: FileSystemLoader.cs  GraphLoadingItem.cs  WeatherForecast.cs  WeatherForecastService.cs
src/graphlibvisu/Pages/: Counter.razor  FetchData.razor  Index.html  Index.razor  _Host.cshtml  graph.cshtml
src/graphlibvisu/Properties/: launchSettings.json
src/graphlibvisu/Shared/: MainLayout.razor  NavMenu.razor  SurveyPrompt.razor
src/graphlibvisu/wwwroot/: d3.min.js  graphvisu.js  index.css  index.html
src/graphlibvisu/wwwroot/alchemy/scripts/: vendor.js
src/graphlibvisu/wwwroot/css/: site.css
src/graphvisualisation/: Program.cs  Startup.cs  WeatherForecast.cs  graphvisualisation.csproj
src/graphvisualisation/Controllers/: WeatherForecastController.cs
src/graphvisualisation/Properties/: launchSettings.json
